Fix missing whitespace between English and Danish version of phrases

--- a/src/Lexeme.scss
+++ b/src/Lexeme.scss
@@ -25,6 +25,7 @@
     margin-top: 0.1rem;
     .English {
       display: inline-block;
+      padding-right: 0.4rem;
     }
     .Danish {
       display: inline-block;
